# aws-iam

./: LICENSE  README.md  pyproject.toml
aws_iam/: cli.py
